Add GitHub Pages deployment workflow